--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,13 @@ set(SHINY_OGREPLATFORM_LIBRARY "shiny.OgrePlatform")
 # Sources
 file(GLOB SOURCE_FILES Main/*.cpp )
 
+# In Debug mode, write the shader sources to the current directory
+if (DEFINED CMAKE_BUILD_TYPE)
+    if (CMAKE_BUILD_TYPE STREQUAL "Debug")
+        add_definitions(-DSHINY_WRITE_SHADER_DEBUG)
+    endif()
+endif()
+
 if (NOT SHINY_USE_WAVE_SYSTEM_INSTALL)
     file(GLOB SOURCE_FILES2 Preprocessor/*.cpp)
     list(APPEND SOURCE_FILES ${SOURCE_FILES2})
@@ -22,8 +29,6 @@ endif()
 file(GLOB OGRE_PLATFORM_SOURCE_FILES Platforms/Ogre/*.cpp)
 
 add_library(${SHINY_LIBRARY} STATIC ${SOURCE_FILES})
-
-set_target_properties(${SHINY_LIBRARY} PROPERTIES COMPILE_FLAGS "-DMCPP_LIB")
 
 if (SHINY_BUILD_OGRE_PLATFORM)
     add_library(${SHINY_OGREPLATFORM_LIBRARY} STATIC ${OGRE_PLATFORM_SOURCE_FILES})
