Warning fixes, disable editor building by default

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -64,9 +64,11 @@ endif()
 
 set(SHINY_LIBRARY ${SHINY_LIBRARY} PARENT_SCOPE)
 
-add_subdirectory(Editor)
+if (DEFINED SHINY_BUILD_MATERIAL_EDITOR)
+    add_subdirectory(Editor)
 
-set(SHINY_BUILD_EDITOR_FLAG ${SHINY_BUILD_EDITOR_FLAG} PARENT_SCOPE)
+    set(SHINY_BUILD_EDITOR_FLAG ${SHINY_BUILD_EDITOR_FLAG} PARENT_SCOPE)
+endif()
 
 link_directories(${CMAKE_CURRENT_BINARY_DIR})
 set(SHINY_LIBRARIES ${SHINY_LIBRARIES} PARENT_SCOPE)
