Correct CMakeLists.txt with adding inclusion of OGRE_INCLUDE_DIRS for shiny.OgrePlatform

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -38,6 +38,10 @@ add_library(${SHINY_LIBRARY} STATIC ${SOURCE_FILES})
 set(SHINY_LIBRARIES ${SHINY_LIBRARY})
 
 if (SHINY_BUILD_OGRE_PLATFORM)
+    if(NOT DEFINED OGRE_INCLUDE_DIRS)
+        find_package(OGRE REQUIRED)
+    endif()
+    include_directories(${OGRE_INCLUDE_DIRS})
     add_library(${SHINY_OGREPLATFORM_LIBRARY} STATIC ${OGRE_PLATFORM_SOURCE_FILES})
     set(SHINY_LIBRARIES ${SHINY_LIBRARIES} ${SHINY_OGREPLATFORM_LIBRARY})
 endif()
