--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,9 @@
 cmake_minimum_required(VERSION 2.8)
 
 # This is NOT intended as a stand-alone build system! Instead, you should include this from the main CMakeLists of your project.
-# Make sure to link against Ogre and boost::filesystem.
+# Make sure to link against Ogre, boost::filesystem and boost::wave.
+
+find_package(Boost REQUIRED QUIET COMPONENTS system filesystem wave)
 
 option(SHINY_BUILD_OGRE_PLATFORM "build the Ogre platform" ON)
 
@@ -33,6 +35,8 @@ set(OGRE_PLATFORM_SOURCE_FILES
 
 file(GLOB OGRE_PLATFORM_SOURCE_FILES Platforms/Ogre/*.cpp)
 
+include_directories(${Boost_INCLUDE_DIRS})
+add_definitions(-DBOOST_ALL_NO_LIB)
 add_library(${SHINY_LIBRARY} STATIC ${SOURCE_FILES})
 
 set(SHINY_LIBRARIES ${SHINY_LIBRARY})
@@ -41,7 +45,8 @@ if (SHINY_BUILD_OGRE_PLATFORM)
     if(NOT DEFINED OGRE_INCLUDE_DIRS)
         find_package(OGRE REQUIRED)
     endif()
-    include_directories(${OGRE_INCLUDE_DIRS})
+    include_directories(${Boost_INCLUDE_DIRS} ${OGRE_INCLUDE_DIRS})
+    add_definitions(-DBOOST_ALL_NO_LIB)
     add_library(${SHINY_OGREPLATFORM_LIBRARY} STATIC ${OGRE_PLATFORM_SOURCE_FILES})
     set(SHINY_LIBRARIES ${SHINY_LIBRARIES} ${SHINY_OGREPLATFORM_LIBRARY})
 endif()
