Fix installing static libs
Signed-off-by: Igor Gnatenko <i.gnatenko.brain@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,12 @@ set(SHINY_MINOR_VERSION 3)
 find_package(Boost REQUIRED QUIET COMPONENTS system filesystem wave)
 
 option(SHINY_BUILD_OGRE_PLATFORM "build the Ogre platform" ON)
-option(SHINY_BUILD_SHARED "build the shiny libraries shared" OFF)
-if(SHINY_BUILD_SHARED)
+option(BUILD_SHARED_LIBS "Build shared libraries" OFF)
+if(BUILD_SHARED_LIBS)
     set(SHINY_LIBRARY_TYPE SHARED)
-else(SHINY_BUILD_SHARED)
+else(BUILD_SHARED_LIBS)
     set(SHINY_LIBRARY_TYPE STATIC)
-endif(SHINY_BUILD_SHARED)
+endif(BUILD_SHARED_LIBS)
 
 set(SHINY_LIBRARY "shiny")
 set(SHINY_OGREPLATFORM_LIBRARY "shiny.OgrePlatform")
@@ -36,11 +36,20 @@ set(SOURCE_FILES
 include_directories(${Boost_INCLUDE_DIRS})
 add_definitions(-DBOOST_ALL_NO_LIB)
 add_library(${SHINY_LIBRARY} ${SHINY_LIBRARY_TYPE} ${SOURCE_FILES})
-if(SHINY_BUILD_SHARED)
+if(BUILD_SHARED_LIBS)
     target_link_libraries(${SHINY_LIBRARY} ${Boost_LIBRARIES})
     set_target_properties(${SHINY_LIBRARY} PROPERTIES SOVERSION "${SHINY_MAJOR_VERSION}.${SHINY_MINOR_VERSION}")
-endif(SHINY_BUILD_SHARED)
-install(TARGETS ${SHINY_LIBRARY} LIBRARY DESTINATION lib${LIB_SUFFIX})
+endif(BUILD_SHARED_LIBS)
+
+if(BUILD_SHARED_LIBS)
+    install(TARGETS ${SHINY_LIBRARY}
+            LIBRARY DESTINATION lib${LIB_SUFFIX}
+            RUNTIME DESTINATION lib${LIB_SUFFIX})
+else(BUILD_SHARED_LIBS)
+    install(TARGETS ${SHINY_LIBRARY}
+            ARCHIVE DESTINATION lib${LIB_SUFFIX}
+            RUNTIME DESTINATION lib${LIB_SUFFIX})
+endif(BUILD_SHARED_LIBS)
 
 set(SHINY_LIBRARIES ${SHINY_LIBRARY})
 
@@ -65,8 +74,15 @@ if (SHINY_BUILD_OGRE_PLATFORM)
     add_library(${SHINY_OGREPLATFORM_LIBRARY} ${SHINY_LIBRARY_TYPE} ${OGRE_PLATFORM_SOURCE_FILES})
     add_dependencies(${SHINY_OGREPLATFORM_LIBRARY} ${SHINY_LIBRARY})
     set(SHINY_LIBRARIES ${SHINY_LIBRARIES} ${SHINY_OGREPLATFORM_LIBRARY})
-    install(TARGETS ${SHINY_OGREPLATFORM_LIBRARY}
-            LIBRARY DESTINATION lib${LIB_SUFFIX}//OGRE)
+    if(BUILD_SHARED_LIBS)
+        install(TARGETS ${SHINY_OGREPLATFORM_LIBRARY}
+                LIBRARY DESTINATION lib${LIB_SUFFIX}//OGRE
+                RUNTIME DESTINATION lib${LIB_SUFFIX}//OGRE)
+    else(BUILD_SHARED_LIBS)
+        install(TARGETS ${SHINY_OGREPLATFORM_LIBRARY}
+                ARCHIVE DESTINATION lib${LIB_SUFFIX}//OGRE
+                RUNTIME DESTINATION lib${LIB_SUFFIX}//OGRE)
+    endif(BUILD_SHARED_LIBS)
 endif()
 
 set(SHINY_LIBRARY ${SHINY_LIBRARY} PARENT_SCOPE)
