shiny.OgrePlatform.so should be installed in libdir
Signed-off-by: Igor Gnatenko <i.gnatenko.brain@gmail.com>

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -82,12 +82,12 @@ if (SHINY_BUILD_OGRE_PLATFORM)
     set(SHINY_LIBRARIES ${SHINY_LIBRARIES} ${SHINY_OGREPLATFORM_LIBRARY})
     if(BUILD_SHARED_LIBS)
         install(TARGETS ${SHINY_OGREPLATFORM_LIBRARY}
-                LIBRARY DESTINATION lib${LIB_SUFFIX}//OGRE
-                RUNTIME DESTINATION lib${LIB_SUFFIX}//OGRE)
+                LIBRARY DESTINATION lib${LIB_SUFFIX}
+                RUNTIME DESTINATION lib${LIB_SUFFIX})
     else(BUILD_SHARED_LIBS)
         install(TARGETS ${SHINY_OGREPLATFORM_LIBRARY}
-                ARCHIVE DESTINATION lib${LIB_SUFFIX}//OGRE
-                RUNTIME DESTINATION lib${LIB_SUFFIX}//OGRE)
+                ARCHIVE DESTINATION lib${LIB_SUFFIX}
+                RUNTIME DESTINATION lib${LIB_SUFFIX})
     endif(BUILD_SHARED_LIBS)
     file(GLOB HEADERS_PLATFORM_OGRE Platforms/Ogre/*.hpp)
     install(FILES ${HEADERS_PLATFORM_OGRE} DESTINATION include/shiny/Platforms/Ogre)
