fix build with recent gcc & cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -93,13 +93,13 @@ if (SHINY_BUILD_OGRE_PLATFORM)
     install(FILES ${HEADERS_PLATFORM_OGRE} DESTINATION include/shiny/Platforms/Ogre)
 endif()
 
-set(SHINY_LIBRARY ${SHINY_LIBRARY} PARENT_SCOPE)
+set(SHINY_LIBRARY ${SHINY_LIBRARY})
 
 if (DEFINED SHINY_BUILD_MATERIAL_EDITOR)
     add_subdirectory(Editor)
 
-    set(SHINY_BUILD_EDITOR_FLAG ${SHINY_BUILD_EDITOR_FLAG} PARENT_SCOPE)
+    set(SHINY_BUILD_EDITOR_FLAG ${SHINY_BUILD_EDITOR_FLAG})
 endif()
 
 link_directories(${CMAKE_CURRENT_BINARY_DIR})
-set(SHINY_LIBRARIES ${SHINY_LIBRARIES} PARENT_SCOPE)
+set(SHINY_LIBRARIES ${SHINY_LIBRARIES})
